fix : hover on mobile

--- a/app/src/components/DndWide/DndWide.scss
+++ b/app/src/components/DndWide/DndWide.scss
@@ -1,8 +1,9 @@
 .dnd__wide__container {
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
   background: var(--background1);
-  width: 100%;
-  overflow: auto;
+  overflow: hidden;
 }
 .settings__button {
   width: 40px;
